--- a/pom.xml
+++ b/pom.xml
@@ -61,17 +61,21 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+    		<groupId>org.springdoc</groupId>
+    		<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+    		<version>2.2.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-webmvc-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	
-   <dependency>
-     <groupId>org.hibernate</groupId>
-     <artifactId>hibernate-core</artifactId>
-     <version>5.4.4.Final</version>
-   </dependency>
- </dependencies>
+  		<dependency>
+    		<groupId>org.hibernate</groupId>
+    		<artifactId>hibernate-core</artifactId>
+    		<version>5.4.4.Final</version>
+   		</dependency>
+ 	</dependencies>
 
 	<build>
 		<plugins>
